title attr for phone

--- a/src/app/todo-user-list/todo-user-list.component.html
+++ b/src/app/todo-user-list/todo-user-list.component.html
@@ -9,7 +9,7 @@
         <div class="details">
           <span>
             <mat-icon aria-hidden="false" aria-label="Phone icon" class="icon-display">phone</mat-icon>
-            <span>{{formatPhone(todoUser.phone)}}</span>
+            <span title="{{formatPhone(todoUser.phone)}}">{{formatPhone(todoUser.phone)}}</span>
           </span>
           <span>
             <mat-icon aria-hidden="false" aria-label="Mail icon" class="icon-display">mail</mat-icon>
